--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <head>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>微信扫描二维码</title>
+        <title>娄军师裂变课程报名二维码</title>
         <link rel="stylesheet" href="main.css" type="text/css">
     </head>
     <body>
         <div id="word">
-            <p>截屏保存二维码到手机，微信扫描</p>
+            <p>长按图片识别二维码，加入报名群</p>
         </div>
         <div id="subword">
-            <p>微信保存，识别二维码，添加客服微信</p>
+            <p>长按图片识别二维码，加入报名群</p>
         </div>
         <div id="show">
                 <img id="showimg" width="300px" height="300px" /> 
